# repo-impersonation-monitor

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  SECURITY.md  THREAT_MODEL.md  action.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  live-discovery.yml  scorecard.yml  self-scan.yml  zizmor.yml
docs/: _config.yml  index.md  robots.txt  sitemap.xml
docs/_layouts/: default.html
examples/: impersonation-check.yml
src/repo_impersonation_monitor/: __init__.py  candidates.py  config.py  github_io.py  main.py  models.py  pe.py  report.py  scoring.py  signals.py
tests/: conftest.py  test_candidates.py  test_config.py  test_github_io.py  test_live_discovery.py  test_main.py  test_models.py  test_pe.py  test_pe_fixture_stability.py  test_real_cases_manifest.py  test_report.py  test_scoring.py  test_seeded_detection.py  test_signals.py
tests/fixtures/: _generate_pe_fixtures.py  real_cases.yaml
tests/fixtures/seeded/: __init__.py  builder.py  pe_builder.py
tools/: live_discovery.py  live_real_cases.py
