[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-impersonation-monitor"
version = "0.1.0"
description = "Opt-in GitHub Action that detects repos impersonating your project and drafts a paste-ready abuse report."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Mark Hinderliter" }]
dependencies = [
    # PE version-resource parsing (the differentiator signal). Bytes-only; the
    # binary is never executed. GitHub I/O uses the standard library (urllib).
    "pefile>=2024.8.26",
]

[project.scripts]
repo-impersonation-monitor = "repo_impersonation_monitor.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "bandit>=1.7",
    "pip-audit>=2.7",
    "pre-commit>=3.7",
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["repo_impersonation_monitor"]
branch = true

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
